feat: completed drag design for desktop

--- a/index.html
+++ b/index.html
@@ -13,21 +13,34 @@
     .attribution { font-size: 11px; text-align: center; }
     .attribution a { color: hsl(228, 45%, 44%); }
   </style>
+  <link rel="stylesheet" href="./dist/css/style.min.css">
 </head>
 <body>
-
-  We're coming soon
-
-  Hello fellow shoppers! We're currently building our new fashion store. 
-  Add your email below to stay up-to-date with announcements and our launch deals.
-
-  Email Address
-  
-  <footer>
-    <p class="attribution">
-      Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-      Coded by <a href="#">Your Name Here</a>.
-    </p>
-  </footer>
+  <main class="hero">
+    <div class="hero__image__container">
+    </div>
+    <div class="hero__text__container">
+      <img src="./images/logo.svg" alt="Logo">
+      <h1 class="hero__text__title">
+        We're
+      </h1>
+      <h1 class="hero__text__first__sub__title">
+        coming
+      </h1>
+      <h1 class="hero__text__second__sub__title">
+        soon
+      </h1>
+      <p class="hero__text__description">
+        Hello fellow shoppers! We're currently building our new fashion store. 
+        Add your email below to stay up-to-date with announcements and our launch deals.
+      </p>
+      <label class="hero__label">
+        <input class="hero__input" type="email" name="email" placeholder="Email Address">
+        <span>
+          <!-- <img src="./images/icon-arrow.svg" alt="Arrow Icon"> -->
+        </span>
+      </label>
+    </div>
+  </main>
 </body>
 </html>
